# compute-sdk-python

./: .env  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  app.py  build.sh  compose.wac  main.py  pyproject.toml  requirements.txt  rust-toolchain.toml  test.toml  wrap_app_in_wasiless.wac
.github/: dependabot.yml
.github/actions/setup-rust/: action.yml
.github/scripts/: get-componentize-py-dir.py  setup-nightly.sh
.github/workflows/: build-wheels.yml  build.yml  publish.yml  python-ci.yml  release.yml
crates/fastly-compute-py/: Cargo.toml  build.rs
crates/fastly-compute-py/src/: cli.rs  config.rs  dependencies.rs  lib.rs  main.rs  site_packages.rs
crates/wasiless/: .gitignore  Makefile  README.md
crates/wasiless/src/: bindings.rs  filesystem.rs  lib.rs  random.rs  sockets.rs
crates/wasiless/wit/: wasiless.wit
examples/: README.md  backend-requests.py  backend-simple.py  bottle-app.py  datascience-compatibility.py  datascience-wasi.py  flask-app.py  game-of-life.py  numpy-wasi-test.py  requests-simple.py  shims.py
examples/backend-requests/: backend-requests.py  pyproject.toml
examples/bottle-app/: bottle-app.py  pyproject.toml
examples/config-store/: config-store.py  pyproject.toml
examples/flask-app/: pyproject.toml
examples/game-of-life/: game-of-life.py  pyproject.toml
examples/logging/: log_app.py  pyproject.toml
fastly_compute/: __init__.py  _error_mapping.py  _resource.py  acl.py  async_io.py  backend.py  cache.py  compute_runtime.py  config_store.py  device_detection.py  dictionary.py  erl.py  exceptions.py  fastly_compute_py.py  geo.py  http_cache.py  http_downstream.py  http_req.py  http_resp.py  image_optimizer.py  kv_store.py  log.py  purge.py  pytest_plugin.py  resource.py  secret_store.py  security.py  shielding.py  test_server.py  testing.py  utils.py  wsgi.py
fastly_compute/_bindings/: __init__.py  acl.py  async_io.py  backend.py  cache.py  compute_runtime.py  config_store.py  device_detection.py  dictionary.py  erl.py  geo.py  http_body.py  http_cache.py  http_downstream.py  http_incoming.py  http_req.py  http_resp.py  http_types.py  image_optimizer.py  kv_store.py  log.py  purge.py  secret_store.py  security.py  shielding.py  types.py
fastly_compute/exceptions/: __init__.py
fastly_compute/exceptions/acl/: __init__.py  acl_error.py
fastly_compute/exceptions/http_body/: __init__.py  trailer_error.py
fastly_compute/exceptions/http_req/: __init__.py
fastly_compute/exceptions/kv_store/: __init__.py  kv_error.py
fastly_compute/exceptions/types/: __init__.py  error.py  open_error.py
fastly_compute/requests/: __init__.py  backend.py  exceptions.py  response.py  timeout.py
fastly_compute/runtime_patching/: decorators.py  patches.py
fastly_compute/testing/: __init__.py  mock_http_server.py  viceroy.py
fastly_compute/testing/stubs/wit_world/exports/: __init__.py  http_incoming.py
fastly_compute/testing/stubs/wit_world/imports/: acl.py  async_io.py  backend.py  cache.py  compute_runtime.py  config_store.py  device_detection.py  dictionary.py  erl.py  geo.py  http_body.py  http_cache.py  http_downstream.py  http_req.py  http_resp.py  http_types.py  image_optimizer.py  kv_store.py  log.py  monotonic_clock.py  purge.py  secret_store.py  security.py  shielding.py  streams.py  types.py
fastly_compute/tests/: __init__.py  conftest.py  test_backend_requests.py  test_config_store.py  test_dependencies_command.py  test_erl.py  test_exception_remapping.py  test_game_of_life_example.py  test_log.py  test_testing.py  test_wasm_metadata.py
fastly_compute/tests/__snapshots__/: test_backend_requests.ambr
fastly_compute/wit_patching/: __init__.py  decorators.py
planning/: acl.md  async.md  cache-purge.md  cache.md  cli-integration.md  codegen.md  config-store.md  device-detection.md  devtools.md  docs-infra.md  erl.md  exceptions.md  geo.md  http-cache.md  image-opto.md  kv-store.md  logging.md  ngwaf.md  request-response.md  runtime-info.md  secret-store.md  todo.md  trailers.md  wit-drop.md
scripts/: bump_version.py  check_version_sync.py  download-wasi-wheels.sh  package_starter_kits.py
scripts/generate_bindings/: __init__.py  __main__.py  generation.py
scripts/generate_bindings/templates/: bindings_module.py.jinja
scripts/generate_exceptions/: __init__.py  __main__.py  generation.py
scripts/generate_exceptions/templates/: default_exception.py.jinja  exception_init_module.py.jinja
scripts/generate_patches/: __init__.py  __main__.py  generation.py  utils.py  wit.py
scripts/generate_patches/templates/: default_exception.py.jinja  exception_init_module.py.jinja  patches.py.jinja
scripts/generate_patches/templates/exceptions/types/: error.py.jinja
scripts/wit/: __init__.py  base.py  types.py  utils.py  wit.py
src/: bindings.rs  cli.rs  clocks.rs  filesystem.rs  io.rs  lib.rs  random.rs  sockets.rs
starter-kits/default/: .gitignore  README.md  fastly.toml  main.py  pyproject.toml
tests/: README.md  __init__.py  conftest.py  test_app.py  test_backend_requests.py  test_backend_simple.py  test_bottle_example.py  test_config_store.py  test_flask_example.py  test_game_of_life_example.py  test_integration.py  test_log.py  test_nice_exceptions.py  test_requests_simple.py  test_testing.py
tests/__snapshots__/: test_backend_requests.ambr
tools/: codegen.py
wit/: viceroy.wit  virt.wit  wasiless.wit
