[project]
name = "fastly-compute"
version = "0.1.0"
description = "Python SDK for Fastly Compute"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bottle",
    "flask",
    "componentize-py (>=0.18.0,<0.19.0)",
]

[project.optional-dependencies]
test = [
    "pytest (>=8.4.0,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]
dev = [
    "ruff (>=0.12.11,<0.13.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = [
    "setuptools (>=80.9.0,<81.0.0)",
    "wheel (>=0.45.0,<0.46.0)"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]
