[project]
name = "fastly-compute"
version = "0.1.0"
description = "Python SDK for Fastly Compute"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest (>=8.4.0,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "tomli-w (>=1.0.0,<2.0.0)",
    "syrupy (==5.0.0)",
]
dev = [
    "componentize-py (>=0.19.3,<0.20)",
    "ruff (>=0.12.11,<0.13.0)",
    "pyrefly (>=0.49.0,<0.50)",
]
# Example dependencies - needed for type-checking examples in CI
examples = [
    "flask (>=3.1.2,<4.0)",
    "bottle (>=0.12.25)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
     "D",   # docstrings
]
ignore = [
    "E501",  # line too long, handled by formatter
    "UP031",  # % string formatting, minimally disruptive for stdlib-based HTML templating
    "D415",  # Don't require punctuation at the end of a docstring summary: sometimes they are noun phrases, not sentences.
    "D205",  # This spuriously complains about line-wrapped single-sentence docstring summaries. Sometimes 80 chars isn't enough.
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

# Ignore doc lints for tests/examples
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"examples/*" = ["D"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.11.5",
]

[tool.maturin]
module-name = "fastly_compute._fastly_compute_py"
manifest-path = "crates/fastly-compute-py/Cargo.toml"

[project.scripts]
fastly-compute-py = "fastly_compute.fastly_compute_py:main"

[tool.setuptools]
py-modules = ["app"]

[tool.pyrefly]
python-version = "3.12"
search-path = ["stubs"]
use-ignore-files = true
# Type-check source code, tests, and examples
project-includes = [
    "fastly_compute/**/*.py",
    "tests/**/*.py",
    "examples/**/*.py",
]
project-excludes = [
    # CLI wrapper imports from native extension that doesn't exist until built
    "fastly_compute/fastly_compute_py.py",
]
