[package]
name = "fastly-compute-py"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fastly_compute_py_build"
path = "src/main.rs"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module", "pyo3"]
binary = []  # Binary feature doesn't need pyo3

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
wac-types = "0.8"
wac-graph = "0.8"
wac-parser = "0.8"
wit-parser = "0.244"
wit-component = "0.244"
wasm-metadata = { version = "0.245", default-features = false }
tempfile = "3"
componentize-py = { git = "https://github.com/bytecodealliance/componentize-py", tag = "v0.22.1" }
futures = { version = "0.3", default-features = false, features = ["executor"] }
pyo3 = { version = "0.28.3", features = ["abi3-py312"], optional = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
indexmap = "2"

[build-dependencies]
anyhow = "1"
cargo_metadata = "0.23.1"
wit-parser = "0.219"
wit-component = "0.219"
