[project]
name = "backend-requests"
version = "0.1.0"
description = "Fastly Compute examples using backends"
requires-python = ">=3.12"
dependencies = [
    "bottle>=0.12.25",
    "fastly-compute",
]

[tool.uv.sources]
fastly-compute = { path = "../../", editable = true }

[tool.fastly-compute]
entry = "backend-requests"
