[project]
name = "logging"
version = "0.1.0"
description = "Fastly Compute example demonstrating Logging API usage"
requires-python = ">=3.12"
dependencies = [
    "bottle>=0.12.25",
    "fastly-compute",
]

[tool.uv.sources]
fastly-compute = { path = "../../", editable = true }

[tool.fastly-compute]
entry = "log_app"
